--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </svg>
           </button>
 
-          <div class="share__content" style="display: none">
+          <div class="share__content" style="visibility: hidden">
             <span>Share</span>
             <div class="share__btns">
               <button class="btn btn--facebook">
